fix: Contrast of book5 title

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,7 +168,7 @@ h1, h2, h3, h4, h5{
     color: #000000;
 }
 .book-5-title{
-    color: #7c7da1;
+    color: #343442;
 }
 
 /* ----------------STYLINGS OF QUIZ PAGES------------------- */
